src/style.css
/*
  Josh's Custom CSS Reset
  https://www.joshwcomeau.com/css/custom-css-reset/
*/

*, *::before, *::after {
  box-sizing: border-box;
}

* {
  margin: 0;
}

body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
}

img, picture, video, canvas, svg {
  display: block;
  max-width: 100%;
}

input, button, textarea, select {
  font: inherit;
}

p, h1, h2, h3, h4, h5, h6 {
  overflow-wrap: break-word;
}

p {
  text-wrap: pretty;
}
h1, h2, h3, h4, h5, h6 {          
  text-wrap: balance;
}

#root, #__next {
  isolation: isolate;
}



/* My styles */
body {
  background-color: #000;
  color: #fff;
  font-family: "Ubuntu Mono";
  display: flex;
  flex-direction: column;
  gap: 10px;
  height: 100dvh;
  width: max(calc(14ch * 2 + 10px), 100%);
  align-items: center;
  padding: 5px;
  font-size: 1.2rem;
}

main { 
  display: flex;
  flex-direction: column;
  gap: 16px;
  width: 100%;
}
h1, h2 {
  font-weight: 400;
}

button {
  background: none;
  color: inherit;
  border: none;
  &:hover { cursor: pointer; }
}

header {
  display: flex;
  flex-direction: column;
  align-items: center; 
}

.controls {
  display: flex;
  justify-content: center;
  gap: 5px;
  & button {
    width: 8ch;
    border-radius: 2px;
  }
  /* this will be set with JS when User presses a btn */
  .active { 
    background-color: rgb(255 255 255 / 0.2);
  }
  
  button {
    background-color: rgb(255 255 255 / 0.05);
  }
}

.clock {
  font-size: 5rem;
  text-align: center;
}

.timer {
  & .start,
  .pause {
    font-size: 2rem;
    width: 100%;
    text-align: center;
    & > button { 
      background-color: rgb(255 255 255 / 0.05); 
      border-radius: 2px;
      padding: 0 1em;
    }
  }
}

.tasks-title-wrapper {
  position: relative;
  margin-bottom: 16px;
}
h2 {
  text-align: center;
  /* text-decoration didn't look nice in Chromium-based browsers, so I made a custom underline */
  & + .underline {
    position: absolute;
    bottom: 5px;
    left: calc(50% - 2.5ch * 1.5);
    width: calc(5ch * 1.5);
    height: 1px;
    background-color: #fff;
  }
}

ul {
  list-style-type: none;
  padding: 0;
}

.tasks {
  display: flex;
  flex-direction: column;
}

.task {
  .main {
    display: flex;
    gap: 1ch;
    align-items: first baseline;
    .check {
      padding: 0; 
      min-width: 3ch;
    }
    .name {
      width: 100%;
      &:hover { cursor: pointer; }
    }
    .tomatoes {
      margin-left: auto;
      flex-wrap: nowrap;
      &:hover {
        cursor: pointer;
      }
    }
  }
  .note {
    opacity: 0.5;
    padding: 0 6ch 0 4ch; 
    &:hover {
      cursor: pointer;
    }
  }
}

/* .new-task {
  .main {
    display: flex;
    gap: 1ch;
    .check {
      padding: 0; 
      min-width: 3ch;
      &:hover { cursor: default; }
    }
    .tomatoes {
      margin-left: auto;
      flex-wrap: nowrap;
    }
  }
  .note {
    opacity: 0.5;
    padding: 0 6ch 0 4ch;
  }
} */

.new-task,
.task-edit {
  background-color: rgb(255 255 255 / 0.2);
  border-radius: 5px;
  padding: 0.5rem 6ch 1rem 4ch; 
  form {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    & input[type="text"] {
      width: 100%;
      background: none;
      border: none;
      color: #fff;
      &::placeholder {
        color: rgb(255 255 255 / 0.5);
        font-style: italic;
      }
      &:focus {
        outline: none;
      }
    }
    .est-tomatoes-wrapper {
      label:has(+ &) { margin-bottom: 0.2rem; }
      display: flex;
      justify-content: flex-start;
      align-items: center;
      gap: 0.5rem;
      & input { 
        width: 5rem;
        flex-shrink: 1; 
        margin-right: 0.5rem;
        border: none;
        outline: none;
      }
    }
    .tomatoes-wrapper {
      display: flex;
      gap: 16px;
      & > * {
        align-items: center;
        display: flex;
        gap: 0.5rem;
        input { 
          width: 3rem; 
          margin-right: 0.5rem;
          border: none;
          outline: none;
        }
      }
    }
    .up, .down {
      padding: 5px;
      background-color: #fff;
      border-radius: 2px;
      flex-shrink: 0;
    }
    .add-note {
      margin-top: 8px;
      padding-left: 0;      
    }
    .note-wrapper { 
      position: relative;
      width: 80%;
    }
    .delete:has(+ .note) {
      position: absolute;
      top: 18px;
      right: 3px;
      content: url("./img/cross.svg");
      width: 15px;
      height: 15px;
      z-index: 1;
      &:hover {
        cursor: pointer;
      }
    }
    .note {
      margin: 16px 0;
      padding: 20px 20px 0 0;
      background-color: white;
      & > textarea {
        width: 100%;
        height: 100%;
        border: none;
        outline: none;
        resize: none;
      }
    }
    .form-submit-wrapper {
      width: 100%;
      display: flex;
      justify-content: flex-end;
      gap: 1rem;
      & > * {
        width: 6ch;
        padding-left: 0;
      }
      & > .delete-task {
        margin-right: auto;
      }
    }
  }
}

.create-task {
  font-size: 2rem;
  align-self: center;
  background-color: rgb(255 255 255 / 0.05);
  padding: 0 16px;
  border-radius: 2px;
}

footer {
  display: flex;
  flex-direction: column;
  width: 100%;
  padding-bottom: 16px;
  .progress {
    display: flex;
    align-items: first baseline;
  } 
  .progress-bar {
    height: 1ex;
    width: calc((6 / 20) * 100%);
    background-color: #fff;
  }
  .right-brace {
    margin-left: auto;
  }
}

@media (min-width: calc(14rem + 110px)) {
  body {
    gap: 16px;
  }
  header {
    margin-right: auto;
  }
  .menu-btn {
    position: absolute;
    top: 10px;
    right: 0;
  }
  .clock {
    font-size: 6rem;  
    line-height: 1;   
  }
}

@media (min-width: 26rem) {
  header { margin-right: 0; }
}

@media (min-width: 65ch) {
  body {
    padding: 0 calc((100vw - 65ch) / 2);
  }
  header {
    width: 100%;
  }
  /* h1 {
    align-self: flex-start;
  } */
  .menu-btn {
    right: calc((100vw - 65ch) / 2);
  } 
  footer { padding: 0 6ch 200px 4ch; }
} 

.checked + .name { text-decoration-line: line-through; }

